src/main/kotlin/com/example/demongodb/global/error/exception/BusinessException.kt
package com.example.demongodb.global.error.exception

open class BusinessException(
    val errorProperty: ErrorProperty
): RuntimeException()